Issue #2887335 by bdichgans, thejimbirch: Text overflows within accordion

--- a/less/bootstrap-paragraphs.less
+++ b/less/bootstrap-paragraphs.less
@@ -316,9 +316,8 @@
   .panel-collapse {
 
     > .paragraph {
-      display: inline-block;
-      margin-left: 15px;
-      margin-right: 15px;
+      padding-left: 15px;
+      padding-right: 15px;
 
       > .paragraph__column {
         padding-bottom: 15px;
